[project]
name = "movies-etl"
version = "0.6.0"
description = "Data pipeline that processes movie ratings data"
authors = [{ name = "Guido Kosloff Gancedo", email = "guidokosloff@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pyspark~=4.1.1",
    "pandera[pyspark]~=0.28.1",
    "setuptools~=80.9.0",
]

[dependency-groups]
dev = [
    "ruff~=0.14.11",
    "ty~=0.0.10",
    "pytest~=9.0.2",
    "pytest-cov~=7.0.0",
    "chispa~=0.11.1",
    "pre-commit~=4.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
branch = true
source = ["movies_etl"]

[tool.coverage.report]
show_missing = true

[tool.ty.rules]
no-matching-overload = "ignore"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
