[project]
name = "movies-etl"
version = "0.6.1"
description = "Data pipeline that processes movie ratings data"
authors = [{ name = "Guido Kosloff Gancedo", email = "guidokosloff@gmail.com" }]
readme = "README.md"
requires-python = "~=3.14.0"
dependencies = [
    "pyspark~=4.1.2",
    "pandera[pyspark]~=0.32.1",
]

[dependency-groups]
dev = [
    "ruff~=0.15.20",
    "ty~=0.0.56",
    "pytest~=9.1.1",
    "pytest-cov~=7.1.0",
    "chispa~=0.12.0",
    "pre-commit~=4.6.0",
]

[tool.uv]
# pyspark.pandas (used by pandera.pyspark) imports pandas.core.common._builtin_table,
# which was removed in pandas 3.0. Constrain below 3.0 until PySpark supports it.
constraint-dependencies = ["pandas<3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
branch = true
source = ["movies_etl"]

[tool.coverage.report]
show_missing = true

[tool.ty.rules]
no-matching-overload = "ignore"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
